--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h2>You are</h2>
+      <button type="button" class="btn btn-primary">School</button>
+      <button type="button" class="btn btn-primary">Parents</button>
+    </div>
+  </body>
 </html>
