school.html file created

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   <body>
     <div>
       <h2>You are</h2>
-      <button type="button" class="btn btn-primary">School</button>
+      <a href="school.html">
+        <button type="button" class="btn btn-primary">School</button></a
+      >
       <button type="button" class="btn btn-primary">Parents</button>
     </div>
   </body>
