--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <title></title>
 
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@100;400;900&family=Sacramento&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/865b41fde3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-
-
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="https://kit.fontawesome.com/865b41fde3.js" crossorigin="anonymous"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js">
-
-  </script>
+    </script>
 </head>
 <body>
+    <div>
+        <h2>You are</h2>
+        <button type="button" class="btn btn-primary">School</button>
+        <button type="button" class="btn btn-primary">Parents</button>
+    </div>
+    
+
     
 </body>
 </html>
